# popfc

./: .gitignore  CLAUDE.md  Makefile  PopPyramid_US_1970-2017_2020-01-15.r  README.md  _quarto.yml  births.qmd  counties.qmd  create_county_population_control_totals.qmd  get-components-of-change.qmd  get-year-county-sex-sya-shares.qmd  index.qmd  links.qmd  methodology.qmd  misc_data_notes.qmd  misc_notes.qmd  pyproject.toml  requirements-dev.txt  requirements.txt  setup.R  steps.qmd  test.r
data/: Bridged-Race Population Estimates 1990-2020_SaratogaWashington.txt
data_raw/: MANIFEST.toml
docs/: changelog.md  data_dictionary.md  methodology.md  planning.md  workflow.md
notebooks/: 01_population_reconciliation.ipynb  02_components_audit.ipynb  03_age_sex_audit.ipynb  04_external_data.ipynb  05_fertility.ipynb  06_mortality.ipynb  07_migration.ipynb  08_county_forecast.ipynb  09_town_forecast.ipynb  10_final_summary.ipynb  11_rural_town_analysis.ipynb  12_town_forecast_audit.ipynb  _build_01_reconciliation.py  _build_02_components_audit.py  _build_03_age_sex_audit.py  _build_04_external_data.py  _build_05_fertility.py  _build_06_mortality.py  _build_07_migration.py  _build_08_county_forecast.py  _build_09_town_forecast.py  _build_10_final_summary.py  _build_11_rural_town_analysis.py  _build_12_town_forecast_audit.py
scripts/: build_manifest.py
tests/: test_acs.py  test_census_sya.py  test_cohort_component.py  test_cornell.py  test_download.py  test_fertility.py  test_hamilton_perry.py  test_hamilton_perry_multivintage.py  test_hamilton_perry_v3.py  test_ipf.py  (+10 more)
(+70 files in other folders)
